@@ -1,5 +1,12 @@
 #ifndef Ny_HEAPY_H
 
+/* Definiing Py_ssize_t for backwards compatibility, from PEP 353 */
+
+#if PY_VERSION_HEX < 0x02050000 && !defined(PY_SSIZE_T_MIN)
+typedef int Py_ssize_t;
+#define PY_SSIZE_T_MAX INT_MAX
+#define PY_SSIZE_T_MIN INT_MIN
+#endif
 
 struct ExtraType;
 
